# publsp

./: .env.dev  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  noxfile.py  pyproject.toml
output/: nostr-keys.json.dev
publsp/: main.py  settings.py
publsp/api/: __init__.py  app.py  session.py  utils.py
publsp/api/routes/: __init__.py  ads.py  channels.py  orders.py  session.py
publsp/blip51/: channel.py  info.py  mixins.py  order.py  payment.py  utils.py
publsp/cli/: basecli.py  customerargs.py  customercli.py  helpers.py  logger.py  lspargs.py  lspcli.py  lsputils.py
publsp/ln/: base.py  bech32.py  cln.py  invdecoder.py  lnd.py  requesthandlers.py  utils.py
publsp/marketplace/: base.py  customer.py  lsp.py  response_manager.py
publsp/nostr/: client.py  keyhandler.py  kinds.py  nip17.py  relays.py
scripts/: run_api.py
tests/: conftest.py  pay_invoice.py  test_connections.py  test_customer_cli.py  test_lnd_backend.py  test_lsp_ad_handling.py  test_lsp_cli.py
