[project]
name = "publsp"
version = "0.2.3"
description = "A rough implementation of the bLIP51, inspired by NIP-15/69/99 spec mediated through Nostr"
license = { text = "MIT" }
authors = [
    {name = "smallworlnd",email = "smallworlnd@sparkseer.space"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "nostr-sdk (>=0.40.0,<=0.42.1)",
    "bitstring (>=4.3.0,<5.0.0)",
    "secp256k1 (>=0.14.0,<0.15.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "click (>=8.1.8,<9.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
]

[tool.poetry.scripts]
publsp = "publsp.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
nox = "^2025.5.1"
